--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 main-title: "The Road No one taken"
 subtitle: "Loving books, music and movies"
-description: "Lu Lab at Institute of Genetics and Developmental Biology, Chinese Academy of Sciences"
+description: "welcome to my tree hole"
 # images:
 # - image_path: /img/home/home01.jpg
 # - image_path: /img/home/home02.jpg
