--- a/Test.html
+++ b/Test.html
@@ -36,6 +36,12 @@ https://github.com/kitian616/jekyll-TeXt-theme
 				{% endfor %}
 				{% endcapture %}
         {{ tags | split:'__SEPERATOR__' | sort }}
+            </div>
+
+            <!-- Article List -->
+			<div class="mini-post-list js-result d-none">
+                
+            </div>
 		</div>
 	</div>
 </div>
