--- a/Test.html
+++ b/Test.html
@@ -40,7 +40,11 @@ https://github.com/kitian616/jekyll-TeXt-theme
 
             <!-- Article List -->
 			<div class="mini-post-list js-result d-none">
-                {%- assign _sorted_list = for post in site.posts ｜ if post.categories contains 'Life'  -%}
+                {%- assign _sorted_list = site.posts -%}
+                {%- -%}
+                {% for post in site.posts %}
+                    {% if post.categories contains 'Life' %}
+                        {% _sorted_list.append(post) %}
                 {%- assign _sorted_list = _sorted_list | sort: 'date' -%}
                 {%- assign _sorted_list = _sorted_list | reverse -%}
     
