--- a/Test.html
+++ b/Test.html
@@ -26,13 +26,17 @@ https://github.com/kitian616/jekyll-TeXt-theme
 
 				{% capture tags %}
 				{% for tag in site.tags %}
-				<a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
-					data-encode="{{ tag[0] | strip | url_encode }}"
-					class="tag-button"
-					title="{{ tag[0] }}" rel="{{ tag[1].size }}">
-					{{ tag[0] }}
-					<sup>{{tag[1].size}}</sup>
-				</a>__SEPERATOR__
+                    {% for post in site.posts %}
+                        {% if post.categories contains 'Life' %}
+                        <a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
+                            data-encode="{{ tag[0] | strip | url_encode }}"
+                            class="tag-button"
+                            title="{{ tag[0] }}" rel="{{ tag[1].size }}">
+                            {{ tag[0] }}
+                            <sup>{{tag[1].size}}</sup>
+                        </a>__SEPERATOR__
+                        {% endif %}
+                    {% endfor %} 
 				{% endfor %}
 				{% endcapture %}
         {{ tags | split:'__SEPERATOR__' | sort }}
@@ -48,7 +52,6 @@ https://github.com/kitian616/jekyll-TeXt-theme
                 {% endfor %}
                 {%- assign _sorted_list = _sorted_list | sort: 'date' -%}
                 {%- assign _sorted_list = _sorted_list | reverse -%}
-    
     
                 {%- for _article in _sorted_list -%}
                     {%- assign _tags = '' -%}
