--- a/Movies.html
+++ b/Movies.html
@@ -1,5 +1,5 @@
 ---
-title: Test
+title: Movies
 layout: default
 description: "「测试页」"
 header-img: "img/tag-bg.jpg"
@@ -25,9 +25,9 @@ https://github.com/kitian616/jekyll-TeXt-theme
 				</a>
 
 				{% capture tags %}
-				{% for tag in site.tags %}
-                    {% for post in site.posts %}
-                        {% if post.categories contains 'Movie' %}
+				{%- for tag in site.tags -%}
+                    {%- for post in site.posts -%}
+                        {%- if post.categories contains 'Movie' -%}
                         <a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
                             data-encode="{{ tag[0] | strip | url_encode }}"
                             class="tag-button"
@@ -35,9 +35,9 @@ https://github.com/kitian616/jekyll-TeXt-theme
                             {{ tag[0] }}
                             <sup>{{tag[1].size}}</sup>
                         </a>__SEPERATOR__
-                        {% endif %}
-                    {% endfor %} 
-				{% endfor %}
+                        {%- endif -%}
+                    {%- endfor -%} 
+				{%- endfor -%}
 				{% endcapture %}
         {{ tags | split:'__SEPERATOR__' | sort }}
             </div>
@@ -46,7 +46,7 @@ https://github.com/kitian616/jekyll-TeXt-theme
 			<div class="mini-post-list js-result d-none">
                 {%- assign _sorted_list= '' | split: ',' -%}
                 {% for post in site.posts %}
-                    {% if post.categories contains 'Movie' %}
+                    {%- if post.categories contains 'Movie' -%}
                         {% assign _sorted_list = _sorted_list | push: post %}
                     {% endif %}
                 {% endfor %}
