--- a/Life.html
+++ b/Life.html
@@ -26,8 +26,7 @@ https://github.com/kitian616/jekyll-TeXt-theme
 
 				{% capture tags %}
 				{% for tag in site.tags %}
-                    {% for post in site.posts %}
-                        {% if post.categories contains 'Life' %}
+                    {% for post in site.categories.Life %}
                         <a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
                             data-encode="{{ tag[0] | strip | url_encode }}"
                             class="tag-button"
@@ -35,7 +34,6 @@ https://github.com/kitian616/jekyll-TeXt-theme
                             {{ tag[0] }}
                             <sup>{{tag[1].size}}</sup>
                         </a>__SEPERATOR__
-                        {% endif %}
                     {% endfor %} 
 				{% endfor %}
 				{% endcapture %}
