--- a/Movies.html
+++ b/Movies.html
@@ -26,8 +26,7 @@ https://github.com/kitian616/jekyll-TeXt-theme
 
 				{% capture tags %}
 				{%- for tag in site.tags -%}
-                    {%- for post in site.posts -%}
-                        {%- if post.categories contains 'Movie' -%}
+                    {% for post in site.categories.Life %}
                         <a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
                             data-encode="{{ tag[0] | strip | url_encode }}"
                             class="tag-button"
@@ -35,7 +34,6 @@ https://github.com/kitian616/jekyll-TeXt-theme
                             {{ tag[0] }}
                             <sup>{{tag[1].size}}</sup>
                         </a>__SEPERATOR__
-                        {%- endif -%}
                     {%- endfor -%} 
 				{%- endfor -%}
 				{% endcapture %}
@@ -45,10 +43,8 @@ https://github.com/kitian616/jekyll-TeXt-theme
             <!-- Article List -->
 			<div class="mini-post-list js-result d-none">
                 {%- assign _sorted_list= '' | split: ',' -%}
-                {% for post in site.posts %}
-                    {%- if post.categories contains 'Movie' -%}
-                        {% assign _sorted_list = _sorted_list | push: post %}
-                    {% endif %}
+                {% for post in site.categories.Life %}
+                    {% assign _sorted_list = _sorted_list | push: post %}
                 {% endfor %}
                 {%- assign _sorted_list = _sorted_list | sort: 'date' -%}
                 {%- assign _sorted_list = _sorted_list | reverse -%}
