--- a/Life.html
+++ b/Life.html
@@ -42,6 +42,14 @@ https://github.com/kitian616/jekyll-TeXt-theme
 
             <!-- Article List -->
 			<div class="mini-post-list js-result d-none">
+                {%- assign _sorted_list = '' -%}
+                    {% for post in site.categories.Life %}
+                        {% assign _sorted_list = _sorted_list | push: post %}
+                    {%- endfor -%}
+                {%- assign _sorted_list = _sorted_list | sort: 'date' -%}
+                {%- assign _sorted_list = _sorted_list | reverse -%}
+
+
                 {%- for _article in site.categories.Life -%}
                     {%- assign _tags = '' -%}
                     {%- for _tag in _article.tags -%}
