--- a/Life.html
+++ b/Life.html
@@ -42,7 +42,7 @@ https://github.com/kitian616/jekyll-TeXt-theme
 
             <!-- Article List -->
 			<div class="mini-post-list js-result d-none">
-                {%- assign _sorted_list = site.posts.categories.Life -%}
+                {%- assign _sorted_list = site.categories.Life -%}
                 {%- assign _sorted_list = _sorted_list | sort: 'date' -%}
                 {%- assign _sorted_list = _sorted_list | reverse -%}
 
