--- a/Test.html
+++ b/Test.html
@@ -43,6 +43,12 @@ https://github.com/kitian616/jekyll-TeXt-theme
 			{%- assign _sorted_list = _sorted_list | sort: 'date' -%}
 			{%- assign _sorted_list = _sorted_list | reverse -%}
 
+			{% for post in site.posts %}
+			{% if post.categories contains 'blog' %}
+				{% capture y %}{{post.date | date:"%Y"}}{% endcapture %}
+			  <li><span>{{ post.date | date_to_string }} &raquo;</span><a href="{{ post.url }}">{{ post.title }}</a></li>
+			{% endif %}
+		  	{% endfor %}
 
 			{%- for _article in _sorted_list -%}
 				{%- assign _tags = '' -%}
