--- a/Test.html
+++ b/Test.html
@@ -34,7 +34,7 @@ https://github.com/kitian616/jekyll-TeXt-theme
 				</a>__SEPERATOR__
 				{% endfor %}
 				{% endcapture %}
-        {{ tags | split:'__SEPERATOR__' | sort }}
+        		{{ tags | split:'__SEPERATOR__' | sort }}
 			</div>
 
             <!-- Article List -->
@@ -65,6 +65,13 @@ https://github.com/kitian616/jekyll-TeXt-theme
 				</span>
 				{%- assign _date = _currentdate -%}
 			{%- endif -%}
+
+			{* for post in site.categories.Life *}
+    		<li class="ant-timeline-item">
+        		<a href="{{ post.url}}">{{ post.title }}</a> 
+    		</li>
+			{* endfor *}
+
 
 				<div class="post-preview item" data-tags="{{ _tags }}">
 				    <a href="{{ _article.url | prepend: site.baseurl }}">
