--- a/Test.html
+++ b/Test.html
@@ -13,10 +13,16 @@ https://github.com/kitian616/jekyll-TeXt-theme
 {% include intro-header.html type='page' short=true %}
 
 <!-- Main Content -->
-<ul>
-	{% for post in site.posts %}
-	  <li>
-		<a href="{{ post.url }}">{{ post.title }}</a>
-	  </li>
-	{% endfor %}
-</ul>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+			<ul>
+				{% for post in site.posts %}
+				<li>
+					<a href="{{ post.url }}">{{ post.title }}</a>
+				</li>
+				{% endfor %}
+			</ul>
+</div>
+</div>
+</div>
