--- a/Test.html
+++ b/Test.html
@@ -17,7 +17,7 @@ https://github.com/kitian616/jekyll-TeXt-theme
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 			<ul>
-				{% for post in site.posts %}
+				{% for post in site.categories.Life%}
 				<li>
 					<a href="{{ post.url }}">{{ post.title }}</a>
 				</li>
