--- a/Test.html
+++ b/Test.html
@@ -19,11 +19,15 @@ https://github.com/kitian616/jekyll-TeXt-theme
 			<ul>
 
 			<!-- Tags (as filter) -->
-			<a class="tag-button--all" data-encode="">
-				Show All
-				<sup>{{site.posts.size}}</sup>
-			</a>
+			<div id='tag_cloud' class="tags tags-sup js-tags"></div>
+				<a class="tag-button--all" data-encode="">
+					Show All
+					<sup>{{site.posts.size}}</sup>
+				</a>
+			</div>
+			</ul>
 
+			<ul>
 			<!-- Article List -->
 			<div class="mini-post-list js-result d-none">
 				{% for _article in site.categories.Life%}
