--- a/Life.html
+++ b/Life.html
@@ -1,7 +1,7 @@
 ---
-title: Test
+title: Life
 layout: default
-description: "「我干了什么 究竟拿了时间换了什么」"
+description: "「生活里那么多美好的事情啊」"
 header-img: "img/tag-bg.jpg"
 ---
 
@@ -18,25 +18,6 @@ https://github.com/kitian616/jekyll-TeXt-theme
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 			<ul>
 				<!-- Article List -->
-				<div id='tag_cloud' class="tags tags-sup js-tags">
-					<a class="tag-button--all" data-encode="">
-						Show All
-						<sup>{{site.posts.size}}</sup>
-					</a>
-	
-					{% capture tags %}
-					{% for tag in site.tags %}
-					<a data-sort="{{ site.posts.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
-						data-encode="{{ tag[0] | strip | url_encode }}"
-						class="tag-button"
-						title="{{ tag[0] }}" rel="{{ tag[1].size }}">
-						{{ tag[0] }}
-						<sup>{{tag[1].size}}</sup>
-					</a>__SEPERATOR__
-					{% endfor %}
-					{% endcapture %}
-					{{ tags | split:'__SEPERATOR__' | sort }}
-				</div>
 
 				<div class="mini-post-list js-result d-none">
 					{% for _article in site.categories.Life%}
@@ -67,8 +48,7 @@ https://github.com/kitian616/jekyll-TeXt-theme
 					</div>
 					{% endfor %}
 				</div>
-				</ul>
-
+			</ul>
 		</div>
 	</div>
 </div>
