--- a/Learning.html
+++ b/Learning.html
@@ -1,7 +1,7 @@
 ---
 title: Learning
 layout: default
-description: "「四月间，天气寒冷晴朗，钟敲了十三下。」"
+description: "「技术贴，学习分享」"
 header-img: "img/tag-bg.jpg"
 ---
 
@@ -18,6 +18,26 @@ https://github.com/kitian616/jekyll-TeXt-theme
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 			<ul>
 				<!-- Article List -->
+
+				<div id='tag_cloud' class="tags tags-sup js-tags">
+					<a class="tag-button--all" data-encode="">
+						Show All
+						<sup>{{site.categories.Learning.size}}</sup>
+					</a>
+
+					{% capture tags %}
+					{% for tag in site.tags %}
+					<a data-sort="{{ site.categories.Learning.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
+						data-encode="{{ tag[0] | strip | url_encode }}"
+						class="tag-button"
+						title="{{ tag[0] }}" rel="{{ tag[1].size }}">
+						{{ tag[0] }}
+						<sup>{{tag[1].size}}</sup>
+					</a>__SEPERATOR__
+					{% endfor %}
+					{% endcapture %}
+					{{ tags | split:'__SEPERATOR__' | sort }}
+				</div>
 
 				<div class="mini-post-list js-result d-none">
 					{% for _article in site.categories.Learning%}
