--- a/Movies.html
+++ b/Movies.html
@@ -19,26 +19,27 @@ https://github.com/kitian616/jekyll-TeXt-theme
 			<ul>
 				<!-- Article List -->
 
-				<div class="mini-post-list js-result d-none">
-					<div id='tag_cloud' class="tags tags-sup js-tags">
-				<a class="tag-button--all" data-encode="">
-					Show All
-					<sup>{{site.categories.Movies.size}}</sup>
-				</a>
+				<div id='tag_cloud' class="tags tags-sup js-tags">
+					<a class="tag-button--all" data-encode="">
+						Show All
+						<sup>{{site.categories.Movies.size}}</sup>
+					</a>
 
-				{% capture tags %}
-				{% for tag in site.tags %}
-				<a data-sort="{{ site.categories.Movies.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
-					data-encode="{{ tag[0] | strip | url_encode }}"
-					class="tag-button"
-					title="{{ tag[0] }}" rel="{{ tag[1].size }}">
-					{{ tag[0] }}
-					<sup>{{tag[1].size}}</sup>
-				</a>__SEPERATOR__
-				{% endfor %}
-				{% endcapture %}
-        {{ tags | split:'__SEPERATOR__' | sort }}
-			</div>
+					{% capture tags %}
+					{% for tag in site.tags %}
+					<a data-sort="{{ site.categories.Movies.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
+						data-encode="{{ tag[0] | strip | url_encode }}"
+						class="tag-button"
+						title="{{ tag[0] }}" rel="{{ tag[1].size }}">
+						{{ tag[0] }}
+						<sup>{{tag[1].size}}</sup>
+					</a>__SEPERATOR__
+					{% endfor %}
+					{% endcapture %}
+					{{ tags | split:'__SEPERATOR__' | sort }}
+				</div>
+
+				<div class="mini-post-list js-result d-none"></div>
 					{% for _article in site.categories.Movies%}
 	
 					{% comment %} group by year {% endcomment %}
