--- a/Life.html
+++ b/Life.html
@@ -21,7 +21,7 @@ https://github.com/kitian616/jekyll-TeXt-theme
 			<div id='tag_cloud' class="tags tags-sup js-tags">
 				<a class="tag-button--all" data-encode="">
 					Show All
-					<sup>{{site.ategories.Life.size}}</sup>
+					<sup>{{site.categories.Life.size}}</sup>
 				</a>
 
 				{% capture tags %}
