--- a/Life.html
+++ b/Life.html
@@ -25,16 +25,14 @@ https://github.com/kitian616/jekyll-TeXt-theme
 				</a>
 
 				{% capture tags %}
-				{% for post in site.categories.Life %}
-					{% for tag in post.tags %}
-					<a data-sort="{{ post.tags.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
-						data-encode="{{ tag[0] | strip | url_encode }}"
-						class="tag-button"
-						title="{{ tag[0] }}" rel="{{ tag[1].size }}">
-						{{ tag[0] }}
-						<sup>{{tag[1].size}}</sup>
-					</a>__SEPERATOR__
-					{% endfor %}
+				{% for tag in site['Life'].tags %}
+				<a data-sort="{{ site['Life'].tags | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
+					data-encode="{{ tag[0] | strip | url_encode }}"
+					class="tag-button"
+					title="{{ tag[0] }}" rel="{{ tag[1].size }}">
+					{{ tag[0] }}
+					<sup>{{tag[1].size}}</sup>
+				</a>__SEPERATOR__
 				{% endfor %}
 				{% endcapture %}
         {{ tags | split:'__SEPERATOR__' | sort }}
