--- a/Learning.html
+++ b/Learning.html
@@ -24,8 +24,8 @@ https://github.com/kitian616/jekyll-TeXt-theme
 				</a>
 
 				{% capture tags %}
-				{% for tag in site['Learning'].tags %}
-				<a data-sort="{{ site['Learning'].tags.size | minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
+				{% for tag in site.tags %}
+				<a data-sort="{{ site.tags.size | site.categories.Learning |minus: tag[1].size | prepend: '0000' | slice: -4, 4 }}"
 					data-encode="{{ tag[0] | strip | url_encode }}"
 					class="tag-button"
 					title="{{ tag[0] }}" rel="{{ tag[1].size }}">
