--- a/Life.html
+++ b/Life.html
@@ -1,8 +1,8 @@
 ---
 title: Life
-layout: default
+layout: Sitepage
 description: "「生活里那么多美好的事情啊」"
-header-img: "img/tag-bg.jpg"
+header-img: "img/about-bg-walle.jpg"
 ---
 
 <!-- 
