--- a/Books.html
+++ b/Books.html
@@ -2,7 +2,7 @@
 title: Books
 layout: default
 description: "「四月间，天气寒冷晴朗，钟敲了十三下。」"
-header-img: "img/tag-bg.jpg"
+header-img: "img/Books.jpg"
 ---
 
 <!-- 
