--- a/Learning.html
+++ b/Learning.html
@@ -2,7 +2,7 @@
 title: Learning
 layout: default
 description: "「技术贴，学习分享」"
-header-img: "img/tag-bg.jpg"
+header-img: "img/Learning.jpg"
 ---
 
 <!-- 
