--- a/Life.html
+++ b/Life.html
@@ -2,7 +2,7 @@
 title: Life
 layout: default
 description: "「生活里那么多美好的事情啊」"
-header-img: "img/about-bg-walle.jpg"
+header-img: "img/Life.jpg"
 ---
 
 <!-- 
