--- a/Movies.html
+++ b/Movies.html
@@ -2,7 +2,7 @@
 title: Movies
 layout: default
 description: "「Hakuna Matata !」"
-header-img: "img/Lion-king.jpg"
+header-img: "img/Movies.jpg"
 ---
 
 <!-- 
