--- a/Music.html
+++ b/Music.html
@@ -2,7 +2,7 @@
 title: Music
 layout: default
 description: "「Show me what you got !」"
-header-img: "img/tag-bg.jpg"
+header-img: "img/Music.jpg"
 ---
 
 <!-- 
