--- a/Books.html
+++ b/Books.html
@@ -13,6 +13,9 @@ https://github.com/kitian616/jekyll-TeXt-theme
 {% include intro-header.html type='page' short=false %}
 
 <!-- Main Content -->
+<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js">
+</script>
+
 本站总访问量<span id="busuanzi_value_site_pv"></span>次
 
 <div class="container">
