--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ description: "「少有人走的路 到处都是风景」"
 </ul>
 {% endif %}
 
-
+<body>
 <script type="text/javascript" src="public/plugins/components/gitalk.min.js"></script>
 <script type="text/javascript">
 	window.title_id = window.location.hash.match(/#(.*?)([?]|$)/) ? window.location.hash.match(/#(.*?)([?]|$)/)[1] : '/';
@@ -63,4 +63,4 @@ description: "「少有人走的路 到处都是风景」"
 	})
 </script>
 <script type="text/javascript" src="public/plugins/components/docsify.gitalk.js"></script>
-
+</body>
