--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ description: "「少有人走的路 到处都是风景」"
 {% endif %}
 
 
-<div id="secondblock" style="display:none;">
+<div class="block">
 	<script type="text/javascript" src="public/plugins/components/gitalk.min.js"></script>
 	<script type="text/javascript">
 		window.title_id = window.location.hash.match(/#(.*?)([?]|$)/) ? window.location.hash.match(/#(.*?)([?]|$)/)[1] : '/';
