--- a/Books.html
+++ b/Books.html
@@ -16,7 +16,9 @@ https://github.com/kitian616/jekyll-TeXt-theme
 <script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js">
 </script>
 
+<!--
 本站总访问量<span id="busuanzi_value_site_pv"></span>次
+-->
 
 <div class="container">
 	<div class="row">
@@ -53,4 +55,24 @@ https://github.com/kitian616/jekyll-TeXt-theme
 			</div>
 		</div>
 	</div>
+</div>
+
+<div class="block">
+	<script type="text/javascript" src="public/plugins/components/gitalk.min.js"></script>
+	<script type="text/javascript">
+		window.title_id = window.location.hash.match(/#(.*?)([?]|$)/) ? window.location.hash.match(/#(.*?)([?]|$)/)[1] : '/';
+		const gitalk = new Gitalk({
+			// 这个需要在github上申请一个OAuth application
+	        clientID: '27ab6265b4a2124d158c',   // GitHub Application Client ID
+	        clientSecret: '822f5ac59aad88a6c8e2b97c0333c82c32f30577',   // GitHub Application Client Secret
+	        repo: 'yangxiaohan0120.github.io', // //存储你评论 issue 的 Github 仓库名
+	        owner: 'Yangxiaohan0120',
+	        admin: ['Yangxiaohan0120'],    // 这个仓库的管理员
+			title: decodeURI(window.title_id),
+			distractionFreeMode: false,	// 是否添加全屏遮罩
+			id: md5(window.location.hash),	// 页面的唯一标识，gitalk 会根据这个标识自动创建的issue的标签,我们使用页面的相对路径作为标识
+			enableHotKey: true,	// 提交评论快捷键(cmd/ctrl + enter)
+		})
+	</script>
+	<script type="text/javascript" src="public/plugins/components/docsify.gitalk.js"></script>
 </div>
