--- a/testpage.html
+++ b/testpage.html
@@ -16,7 +16,8 @@ https://github.com/kitian616/jekyll-TeXt-theme
 <div id="gitalk-container">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-			
+		<a> "WTF"
+		</a>	
   		<link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css">
   		<script src="//unpkg.com/gitalk/dist/gitalk.min.js"></script>
 		
