--- a/testpage.html
+++ b/testpage.html
@@ -29,8 +29,8 @@ https://github.com/kitian616/jekyll-TeXt-theme
   		    repo: 'yangxiaohan0120.github.io',
   		    owner: 'Yangxiaohan0120',
   		    admin: ['Yangxiaohan0120'],
-  		    title: location.hash.match(/#(.*?)([?]|$)/)[1],
-  		    id: location.hash.match(/#(.*?)([?]|$)/)[1],
+  		    id: md5(location.pathname),
+          	distractionFreeMode: '{{ theme.gitalk.distractionFreeMode }}'
   		  })
   		  // 监听URL中hash的变化，如果发现换了一个MD文件，那么刷新页面，解决整个网站使用一个gitalk评论issues的问题。
   		  window.onhashchange = function(event){
