--- a/testpage.html
+++ b/testpage.html
@@ -18,28 +18,22 @@ https://github.com/kitian616/jekyll-TeXt-theme
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 		<a> "WTF"
 			
-  		<link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css">
-  		<script src="//unpkg.com/gitalk/dist/gitalk.min.js"></script>
-		
-  		<script>
-  		  var gitalk = new Gitalk({
-  		    clientID: '27ab6265b4a2124d158c',
-  		    clientSecret: '822f5ac59aad88a6c8e2b97c0333c82c32f30577',
-  		    repo: 'yangxiaohan0120.github.io',
-  		    owner: 'Yangxiaohan0120',
-  		    admin: ['Yangxiaohan0120'],
-  		    id: md5(location.pathname),
-          	distractionFreeMode: '{{ theme.gitalk.distractionFreeMode }}'
-  		  })
-  		  // 监听URL中hash的变化，如果发现换了一个MD文件，那么刷新页面，解决整个网站使用一个gitalk评论issues的问题。
-  		  window.onhashchange = function(event){
-  		    if(event.newURL.split('?')[0] !== event.oldURL .split('?')[0]) {
-  		      location.reload()
-  		    }
-  		  }
-  		  // 由于docsify/lib/plugins/gitalk.min.js文件中已经有下面代码了，所以不需要在写一次了
-  		  // gitalk.render('gitalk-container')
-  		</script>
+  		{% if page.comments && theme.gitalk.enable %}
+  		<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+  		<script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
+  		<script type="text/javascript">
+        var gitalk = new Gitalk({
+          clientID: '{{ theme.gitalk.ClientID }}',
+          clientSecret: '{{ theme.gitalk.ClientSecret }}',
+          repo: '{{ theme.gitalk.repo }}',
+          owner: '{{ theme.gitalk.githubID }}',
+          admin: ['{{ theme.gitalk.adminUser }}'],
+          id: location.pathname,
+          distractionFreeMode: '{{ theme.gitalk.distractionFreeMode }}'
+        })
+        gitalk.render('gitalk-container')           
+       	</script>
+		{% endif %}
   		</a>
   		
   		</div>
