--- a/index.html
+++ b/index.html
@@ -45,7 +45,21 @@ description: "「少有人走的路 到处都是风景」"
 </ul>
 {% endif %}
 
-
+<!-- Default Statcounter code for xiaohan  -->
+<script type="text/javascript">
+var sc_project=12682225; 
+var sc_invisible=1; 
+var sc_security="9e9fcf04"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics Made Easy -
+Statcounter" href="https://statcounter.com/" target="_blank"><img
+class="statcounter" src="https://c.statcounter.com/12682225/0/9e9fcf04/1/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+<a href="https://statcounter.com/p12682225/?guest=1">View My Stats</a>
 
 
 
